# NativeCppApp

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/common/: ByteBuffer.hpp  CELLMath.hpp  CELLTimeCounter.hpp  CELLTimer.cpp  CELLTimer.h  Camera3D.hpp  FrameBufferObject.hpp  ScopedAttachThread.cpp  ScopedAttachThread.h  ScopedLocalRef.hpp  VertexBufferObject.hpp  constructormagic.h  stb_image.cpp  stb_image.h  zzr_common.c  zzr_common.h
app/src/main/cpp/egl/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  GLRender.hpp  GLThread.cpp  GLThread.h  WindowSurface.cpp  WindowSurface.h
app/src/main/cpp/gpufilter/: gpu_filter_jni.cpp
app/src/main/cpp/gpufilter/codec/: CodecEncoder.cpp  CodecEncoder.h
app/src/main/cpp/gpufilter/components/: ByteBuffer.hpp  NV21BufferPool.hpp
app/src/main/cpp/gpufilter/filter/: DouYin4ImageFilter.hpp  DouYinElectricShockFilter.hpp  DouYinSouloutFilter.hpp  GpuBaseFilter.hpp  GpuBaseFilterGroup.hpp  GpuBilateralBlurFilter.hpp  GpuBoxBlurFilter.hpp  GpuBrightnessFilter.hpp  GpuColorInvertFilter.hpp  GpuContrastFilter.hpp  GpuExposureFilter.hpp  GpuGaussianBlurFilter.hpp  GpuGaussianBlurFilter2.hpp  GpuHueFilter.hpp  GpuNormalFilter.hpp  GpuPixelationFilter.hpp  GpuSaturationFilter.hpp  GpuSharpenFilter.hpp
app/src/main/cpp/gpufilter/render/: GpuFilterRender.cpp  GpuFilterRender.h
app/src/main/cpp/nativegl/: GL3DRender.cpp  GL3DRender.h  LightRender.cpp  LightRender.h  NativeGLRender.cpp  NativeGLRender.h  OptimizationRender.cpp  OptimizationRender.h  ShadowFBORender.cpp  ShadowFBORender.h  native_egl_jni.cpp
app/src/main/cpp/objects/: CubeCommon.hpp  CubeIlluminate.hpp  CubeIndex.cpp  CubeIndex.h  CubeShadow.hpp  CubeTBN.hpp  Grassland.cpp  Grassland.h  GreeneryMgr.hpp  Land.hpp  LandShadow.hpp  PIPicture.hpp  Screen2D.hpp  readme.txt
app/src/main/cpp/program/: CubeComProgram.hpp  CubeIlluminateProgram.hpp  CubeIlluminateProgram2.hpp  CubeShaderProgram.cpp  CubeShaderProgram.h  CubeTbnProgram.hpp  DepthOrthoShader.hpp  GPUAnimationProgram.cpp  GPUAnimationProgram.h  GPUFlatSlidingProgram.cpp  GPUFlatSlidingProgram.h  GPUMixShaderProgram.cpp  GPUMixShaderProgram.h  GrasslandProgram.hpp  GreeneryShaderProgram.hpp  IlluminateWithShadow.hpp  LightShadowShader.hpp  ShaderHelper.cpp  ShaderHelper.h  ShaderProgram.cpp  ShaderProgram.h
app/src/main/cpp/utils/: TextureHelper.cpp  TextureHelper.h
app/src/main/java/org/zzrblog/: PermissionActivity.java
app/src/main/java/org/zzrblog/gpufilter/: CFEScheduler.java  CameraFilterEncodeActivity.java  FilterType.java  GpuFilterRender.java
app/src/main/java/org/zzrblog/gpuimage/: CFEScheduler.java  CameraFilterEncodeActivity.java  GpuCameraEncodeActivity.java  GpuFilterEncoder.java
app/src/main/java/org/zzrblog/nativecpp/: MainActivity.java  NativeEGL.java  NativeGLActivity.java  PermissionActivity.java
app/src/main/res/layout/: activity_camera_filter_encode.xml  activity_gpu_camera_encode.xml  activity_native_gl.xml  activity_permission.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
